--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -428,13 +428,18 @@ number   Date        rank         score    Finish time     Q1              Q2   
 8/8
 8/9
 
-
+-1 week
 8/10                           oncall
 8/11                           oncall
 8/12       1.5        Design for FB   
 8/13       1.5              
 8/14
 8/15        2                  Design news feed
+
+
+-2 week
+8/17       2 
+8/18       2
 
 
 
