--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -347,13 +347,14 @@
 <a> 可以写出最直接的解法，O(n)greedy 写法面试很难直接想到</a>
 <ul>
    <li><a href=https://leetcode.com/problems/valid-parentheses/>Valid Parentheses</a>  </li>
-   <li><a href=https://leetcode.com/problems/valid-parenthesis-string/>Valid Parenthesis String</a>  </li>
-   <li><a href=https://leetcode.com/problems/score-of-parentheses/>Score of Parentheses</a>  </li>
-   <li><a href=https://leetcode.com/problems/minimum-add-to-make-parentheses-valid/>Minimum Add to Make Parentheses Valid（返回删除次数不返回string, 只需要记录count不需要stack)</a></li>
-   <li><a href=https://leetcode.com/problems/remove-outermost-parentheses/>Remove Outermost Parentheses</a></li>
-   <li><a href=https://leetcode.com/problems/reverse-substrings-between-each-pair-of-parentheses/>Reverse Substrings Between Each Pair of Parentheses</a></li>
+   <li><a href="solution/ValidateParentensis.html">Valid Parenthesis String(传左阔号数量DFS)</a> <li><a href=https://leetcode.com/problems/valid-parenthesis-string/>Q</a>  </li>
+      <li><a href=https://leetcode.com/problems/minimum-add-to-make-parentheses-valid/>Minimum Add to Make Parentheses Valid（返回删除次数不返回string, 只需要记录count不需要stack)</a></li>
    <li><a href=https://leetcode.com/problems/remove-invalid-parentheses/>Minimum Remove to Make Valid Parentheses(返回所有的可能的string, 用BFS n*2^n)</a></li>
    <li><a href=https://leetcode.com/problems/minimum-remove-to-make-valid-parentheses/>Minimum Remove to Make Valid Parentheses(return any valid String, 用stack记录需要去掉的string的index)</a></li>
+      <li><a href=https://leetcode.com/problems/score-of-parentheses/>Score of Parentheses</a>  </li>
+   <li><a href=https://leetcode.com/problems/remove-outermost-parentheses/>Remove Outermost Parentheses</a></li>
+   <li><a href=https://leetcode.com/problems/reverse-substrings-between-each-pair-of-parentheses/>Reverse Substrings Between Each Pair of Parentheses</a></li>
+
 </ul>
 
 <div class="codingSectionName">Intervals chapter</div>
