--- a/html/solution/ValidateParentensis.html
+++ b/html/solution/ValidateParentensis.html
@@ -31,7 +31,7 @@ class Solution {
             return;
         }
         
-        for(int i=pos; i<s.length(); i++){
+        for(int i=pos; i&lt;s.length(); i++){
             char c =s.charAt(i);
             
             if ( c == '(' || c == ')'){
