--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -342,12 +342,12 @@
 
 
 <div class="codingSectionName">Parentheses</div>
-<a>Stack->counter优化</a>
+<a>阔号题型常见思路: 用counter, stack</a>
 </br>
-<a> 只能写出最直接的解法，最优化的写法面试不可能想到</a>
+<a> 只能写出最直接的解法，最优化写法面试不可能想到</a>
 <ul>
-   <li><a href=https://leetcode.com/problems/valid-parentheses/>Valid Parentheses</a>  </li>
-   <li><a href="solution/ValidateParentensis.html">Valid Parenthesis String(传左阔号数量DFS)</a><a href=https://leetcode.com/problems/valid-parenthesis-string/>Q</a></li>
+   <li><a href=https://leetcode.com/problems/valid-parentheses/>Valid Parentheses(easy)</a>  </li>
+   <li><a href="solution/ValidateParentensis.html">Valid Parenthesis String(字符串有*, 传左阔号数量,substring 做DFS)</a><a href=https://leetcode.com/problems/valid-parenthesis-string/>Q</a></li>
       <li><a href=https://leetcode.com/problems/minimum-add-to-make-parentheses-valid/>Minimum Add to Make Parentheses Valid（返回删除次数不返回string, 只需要记录count不需要stack)</a></li>
    <li><a href=https://leetcode.com/problems/remove-invalid-parentheses/>Minimum Remove to Make Valid Parentheses(返回所有的可能的string, 用BFS n*2^n)</a></li>
    <li><a href=https://leetcode.com/problems/minimum-remove-to-make-valid-parentheses/>Minimum Remove to Make Valid Parentheses(return any valid String, 用stack记录需要去掉的string的index)</a></li>
