--- a/html/solution/Design_NewsFeed.html
+++ b/html/solution/Design_NewsFeed.html
@@ -72,20 +72,26 @@ id 4byte, from 4 byte, to 4 byte, total 12byte
 2B users, each user follow 100 user, total = 500M * 100 * 12byte = 0.6TB. ( 1 server)
 
 
-Table schema:
+Table Schema:
+
 User table
-id          int PK
+user id     int PK
 name        varchar(25)
 email       varchar(30)
 updatedAt   timestamp
 createdAt   timestamp
 
+Shard key(User id)
+
+
+
 photo table
-id        int  PK
+imageid   int  PK
 userId    int  FK
-title     varchar(50)
+ImgURL    varChar(50)
 createdAt timeStamp
-ImagePath varChar(50)
+
+Shared Key(image id)
 
 
 frinedship table
@@ -112,63 +118,20 @@ When to use SQL: 1. ACID(bank) 2. data unchanged
 When to use NOsql : 1. data with no schema and are changing  2. cloud based storage(automatical sharding, replication, save money)
 
 
+metadata DB + File system + Cache
+
+DB: Read heavy. We can use MySQL(read heavy) + Cassandra(NOSQL read heavy+write heavy)
+File System: distributed storage: Amazon S3.
+Cache:
+    Cache for DB: Memcached/Redis
+    Cache for file: CDN
+
+
+
 
 3.3 Component optimization
 Read and Write go to different webserver.
 Write traffic writes image to disk, it is slow. If write traffic flood the web server, service apppool will be hot, read traffic will be queued in kernel mode and then when queue is full, it starts to reject request and the subsequent request will not be served.
-
-
-
-
-Generate News feed for sam whose user id is 1
-
-select photo.title, photo.user_id, photo.createdAt from
-(select * from friendship where from_user = 1) as f
-left join photo
-on f.to_user = photo.user_id
-order by photo.createdAt;
-
-
-
-
-// Sql statment to creat table and insert value
- create database ins  // create database
- use ins// use database
-
- // create user table
-create table user(id int not null auto_increment, name varchar(50) not null, email varchar(50), primary key (id));
- // insert value;
- insert into user (name, email) values ("Lyn", "lzengzeng22@gmail.com");
-insert into user (name, email) values ("Mark", "mark@gmail.com");
-insert into user (name, email) values ("Jay", "mark@gmail.com");
-insert into user (name, email) values ("NanXia", "Nan@gmail.com");
-insert into user (name, email) values ("Jing", "Jing@gmail.com");
-
-// create friendship table;
-create table friendship(id int not null auto_increment, from_user int not null, to_user int not null, primary key (id));
-insert into friendship (from_user, to_user) values (1, 2);
-insert into friendship (from_user, to_user) values (1, 3);
-insert into friendship (from_user, to_user) values (1, 3);
-insert into friendship (from_user, to_user) values (2, 5);
-insert into friendship (from_user, to_user) values (2, 3);
-insert into friendship (from_user, to_user) values (4, 3);
-
-
-// create photo table
-create table photo(id int not null auto_increment primary key, user_id int not null, title varchar(100) not null, image_path varchar(50) not null, createdAt TIMESTAMP DEFAULT CURRENT_TIMESTAMP );
-insert into photo (user_id, title, image_path) values (3, "Japan photo", "Azure/Jay");
-insert into photo (user_id, title, image_path) values (2, "California San Diego photo", "Azure/Mark");
-insert into photo (user_id, title, image_path) values (3, "Cancun trip", "Azure/Jay");
-
-
-
-
-此处还可以用NOSQL DB 来存用户和照片的关系, 哪个用户拥有哪些照片, 
-key: userID
-value: List of photoIDs.
-2->{100,101}
-3->{102,103}
-
 
 
 
@@ -209,17 +172,39 @@ postImage(user, image)
 }
 
 
-<img src="../../img/push.png" width="800px" height="800px">
 
 
 Push mode:
 When I publishes a photo, it is going to fan out the message to all users that are following me.
 
+Push Mode Architecture:
+<img src="../../img/push.png" width="800px" height="800px">
+
+
+
 FeedTable
-id int     PK
 userId     FK
 photoId    FK
 createdAt  TimeStamp
+
+Shared key( UserId)
+TimeStamp做secondary index. 因为最后要用timestamp排序.
+
+Note:
+1. 这里TimeStamp是一定需要的,因为这个feed table是Async job产生的,不能保证先进来的entry就是最新的
+2. 也可以用Userid + creation time 做composite key, 这样就不用做secondary index.
+
+Question:
+爱思系统设计说，这个表里一定要加creation time用来排序，但我认为这个表里产生的photo id和
+最终要和photo table做join,photo table里面有creation time, 那个时候可以排序，为撒feedtable还要存一次？
+
+回答说：
+Feed table先按照creation timestamp sort, 取前N位，在和photo table做 join 比
+Feed table直接和photo table做Join, 在sort, 在取前N位要快。是正确的,因为feedtable 里对于对于某个人的feed会非常的多,你如果用所有的feed和image table做join, 运算量会非常的大.
+
+更快的方式是de-normalize (小表变大表, 把Photo table的column加进来到feedtable里)， 这样就不用join了。
+pro: 不用Join, latency低
+Con: 需要占用更多的存储空间。
 
 
 
@@ -243,32 +228,6 @@ postNewsFeed(user, image)
   }
 }
 
-Example:
-When someone uploads a photo, say Jay uploads a photo
-insert into photo (user_id, title, image_path) values (3, "Japan photo", "Azure/Jay"); it generates photo ID 1
-
-It is going to fan out the photo ID 1 to Jay's followers feedtable
-select from_user from friendship where to_user = 3;  result is 1,2,4
-in this case, which are me, mark and Nan.
-
-insert into feed(userId, photoId) values(1, 1);
-insert into feed(userId, photoId) values(2, 1);
-insert into feed(userId, photoId) values(4, 1);
-
-and then mark uploads the picture
-insert into photo (user_id, title, image_path) values (2, "California San Diego photo", "Azure/Mark"); the crosponding photo id is 4
-It is going to fanout the photoID to Mark's follower's news feedtable,
-select from_user from friendship where to_user = 2;  result is 1, which is Lyn
-
-need to add this message to lyn's feed table/
-insert into feed(userId, photoId) values(1, 4);
-
-Then, you go to Lyn's news feed, just do a join between news table and photo Table
-select title, image_path, createdAt, photo.user_id from
-(select photoID from feed where userId = 1) as f
-left join photo
-on f.photoId = photo.id
-order by photo.createdAt desc;
 
 Push好处就是Latency低．
 
@@ -280,32 +239,6 @@ Push mode的问题是:star user, Lady Gaga发一个twitter后，85.7M fans, 85.7
 
 Pull: Facebook, Twitter
 pull + push: Ins
-
-
-
-
-
-
-
-Question:
-爱思系统设计说，这个表里一定要加creation time用来排序，但我认为这个表里产生的photo id和
-最终要和photo table做join,photo table里面有creation time, 那个时候可以排序，为撒feedtable还要存一次？
-
-回答说：
-Feed table先按照creation timestamp sort, 取前N位，在和photo table做 join 比
-Feed table直接和photo table做Join, 在sort, 在取前N位要快。
-
-更快的方式是de-normalize (小表变大表, 把Photo table的column加进来到feedtable里)， 这样就不用join了。
-pro: 不用Join, latency低
-Con: 需要占用更多的存储空间。
-
-
-
-
-
-
-Optimization to create index on photo id and photo creation time.
-create index idx_on_photo_id_and_creationTime on photo(id, createdAt);
 
 
 
@@ -423,7 +356,108 @@ http GET往后端发请求的时候，带着新发过来的timestamp，后端就
 Final Design:
 <img src="../../img/final.png" width="800px" height="800px">
 
+
+
+
+
+
+
+
+
+Example:
+
+Generate News feed for sam whose user id is 1
+
+select photo.title, photo.user_id, photo.createdAt from
+(select * from friendship where from_user = 1) as f
+left join photo
+on f.to_user = photo.user_id
+order by photo.createdAt;
+
+
+
+
+// Sql statment to creat table and insert value
+ create database ins  // create database
+ use ins// use database
+
+ // create user table
+create table user(id int not null auto_increment, name varchar(50) not null, email varchar(50), primary key (id));
+ // insert value;
+ insert into user (name, email) values ("Lyn", "lzengzeng22@gmail.com");
+insert into user (name, email) values ("Mark", "mark@gmail.com");
+insert into user (name, email) values ("Jay", "mark@gmail.com");
+insert into user (name, email) values ("NanXia", "Nan@gmail.com");
+insert into user (name, email) values ("Jing", "Jing@gmail.com");
+
+// create friendship table;
+create table friendship(id int not null auto_increment, from_user int not null, to_user int not null, primary key (id));
+insert into friendship (from_user, to_user) values (1, 2);
+insert into friendship (from_user, to_user) values (1, 3);
+insert into friendship (from_user, to_user) values (1, 3);
+insert into friendship (from_user, to_user) values (2, 5);
+insert into friendship (from_user, to_user) values (2, 3);
+insert into friendship (from_user, to_user) values (4, 3);
+
+
+// create photo table
+create table photo(id int not null auto_increment primary key, user_id int not null, title varchar(100) not null, image_path varchar(50) not null, createdAt TIMESTAMP DEFAULT CURRENT_TIMESTAMP );
+insert into photo (user_id, title, image_path) values (3, "Japan photo", "Azure/Jay");
+insert into photo (user_id, title, image_path) values (2, "California San Diego photo", "Azure/Mark");
+insert into photo (user_id, title, image_path) values (3, "Cancun trip", "Azure/Jay");
+
+
+
+
+此处还可以用NOSQL DB 来存用户和照片的关系, 哪个用户拥有哪些照片, 
+key: userID
+value: List of photoIDs.
+2->{100,101}
+3->{102,103}
+
+
+Push Mode Example:
+Example:
+When someone uploads a photo, say Jay uploads a photo
+insert into photo (user_id, title, image_path) values (3, "Japan photo", "Azure/Jay"); it generates photo ID 1
+
+It is going to fan out the photo ID 1 to Jay's followers feedtable
+select from_user from friendship where to_user = 3;  result is 1,2,4
+in this case, which are me, mark and Nan.
+
+insert into feed(userId, photoId) values(1, 1);
+insert into feed(userId, photoId) values(2, 1);
+insert into feed(userId, photoId) values(4, 1);
+
+and then mark uploads the picture
+insert into photo (user_id, title, image_path) values (2, "California San Diego photo", "Azure/Mark"); the crosponding photo id is 4
+It is going to fanout the photoID to Mark's follower's news feedtable,
+select from_user from friendship where to_user = 2;  result is 1, which is Lyn
+
+need to add this message to lyn's feed table/
+insert into feed(userId, photoId) values(1, 4);
+
+Then, you go to Lyn's news feed, just do a join between news table and photo Table
+select title, image_path, createdAt, photo.user_id from
+(select photoID from feed where userId = 1) as f
+left join photo
+on f.photoId = photo.id
+order by photo.createdAt desc;
+
+
+
+
+
 </code></pre>
+
+
+
+
+
+
+
+
+
 
 
 
