--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -361,6 +361,13 @@
 <ul>
   <li><a href="solution/mergeIntervals.html">Merge intervals</a> <a href=https://leetcode.com/problems/merge-intervals/>Q</a>  </li>
 </ul>
+
+
+<div class="codingSectionName"Greedy</div>
+<ul>
+  <li> <a href=https://leetcode.com/problems/task-scheduler/>Task Scheduler</a>  </li>
+</ul>
+
 </body>
 
 <div class="codingSectionName">System Design</div>
