--- a/html/solution/InterviewGoogle.html
+++ b/html/solution/InterviewGoogle.html
@@ -144,6 +144,8 @@ GOOGLE题目真难。 但是挺刺激， 所有题目即使有思路，也不一
 
 
 
+
+
 7/28 Googole phone interview.
 
 Anthony:
@@ -171,12 +173,34 @@ Interviewer breaks it down to 2 steps:
 2. Implement getThreshold function.
 Sort the array, go from left to right, apply the number as threshold to the array, find the one that results in totalAds requested > inventory, that's your right bound.   O(n^2)
 
-Decrase the threshold, and find the closes threshold that results the totalAds <= ava. O(n^2)
+3. Decrase the threshold, and find the closes threshold that results the totalAds <= ava. O(n^2)
 
 time complexity : O(n^2)
 
+就是这一步没有分析清楚, 找到upper bound需要O(n), 然后从那个值 做Binary search, 往回走去试那个Threshold
+O(lgMax)*n 
+
+总的复杂度是 O(n^2 + nlg(max) = O( n (n+lg(max) )
 
 
+
+
+
+
+
+Feedback: 8/3
+
+code fast but time complexity is wrong. [1, 100]. 需要从99, 98 .. 50 ... 3. 2 .1 一直往后面数, 而不是从100直接跳到1.   O( lg(max)*n )
+
+
+
+
+简单的解法应该是扫一遍数组, 记录最大的值, threshold只能在最小和最大之间. binary search找到那个值, lg(max) * n
+
+Total time complexity is O(n) + O(lg(max))*n  = O(n lg(max))
+
+
+还是逻辑没想清楚.
 
 
 List<proceessdOrder> processAds(List<Order> orders, int inventory){
@@ -188,7 +212,7 @@ List<proceessdOrder> processAds(List<Order> orders, int inventory){
 }
 
 
-621: task scheduler.
+621: task scheduler. ( 8/21 working on this)
 
 767. Reorganize String
 
@@ -200,11 +224,6 @@ List<proceessdOrder> processAds(List<Order> orders, int inventory){
 
 
 
-
-
-
-
-c
 
 
 
@@ -227,11 +246,7 @@ BQ Question GG:
 没人帮你怎么办？
 
 
-你怎么去鼓励别人帮助你？
-Justin example, Variant config, registry
 
-1. state this is a high impact work item, and we need you help.
-2. keep his boss and my boss in the lop, and make sure this work is visible to everyone, and he is contributing to the impact helping others.
 
 
 
