--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -110,6 +110,11 @@ number   Date        rank         score    Finish time     Q1              Q2   
 193      6/13      4632 / 9991     7       0:35:24         0:02:23      x0:25:24  2 
 198      7/13      7990 / 15151    3       0:22:47        0:22:47  
 199      7/25      6737 / 14309    7       0:39:16         0:03:58      0:34:16  1 
+          
+
+
+
+
           coding    design                                  下午
 
 12/4        3        2         8-11 coding,           状态很差，眼睛都睁不开了(看了design), 晚上回去睡到9点开始看API design, 9-11, 12-1睡不着 breaking bad. 2:30还是睡不着 youtube video
@@ -440,6 +445,10 @@ number   Date        rank         score    Finish time     Q1              Q2   
 -2 week
 8/17       2 
 8/18       2
+8/19
+8/20              2            Design feed ACe
+8/21       2
+8/22       2
 
 
 
