--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -365,7 +365,8 @@
 
 <div class="codingSectionName"Greedy</div>
 <ul>
-  <li> <a href=https://leetcode.com/problems/task-scheduler/>Task Scheduler</a>  </li>
+  <li> <a href=https://leetcode.com/problems/task-scheduler/>Task Scheduler(621, 767)贪心间隔Template</a> </li>
+  <li> <a href=https://leetcode.com/problems/reorganize-string//>Reorganize String(767)</a> </li>
 </ul>
 
 </body>
