--- a/html/solution/InterviewGoogle.html
+++ b/html/solution/InterviewGoogle.html
@@ -12,7 +12,8 @@
 809:expressive words, 还有一道sticky note记不清楚题号码了 (ok two pointers), 
 1153(string ok), 489(ok), 734(ok), 737(ok)
 844(ok), (215, ok), 1146(ok), 664(hard), 1530(二叉树divide and conquer)
-224(ok), 818(ok), 981(ok), 
+224(ok), 818(ok), 981(ok), 621(ok)
+
 
 
 
@@ -212,9 +213,10 @@ List<proceessdOrder> processAds(List<Order> orders, int inventory){
 }
 
 
-621: task scheduler. ( 8/21 working on this)
 
 767. Reorganize String
+
+358. Rearrange String k Distance Apart
 
 
 
