--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -365,8 +365,10 @@
 
 <div class="codingSectionName"Greedy</div>
 <ul>
-  <li> <a href=https://leetcode.com/problems/task-scheduler/>Task Scheduler(621, 767)贪心间隔Template</a> </li>
+  <li> <a href=https://leetcode.com/problems/task-scheduler/>Task Scheduler(621, 767, 358)贪心间隔Template</a> </li>
   <li> <a href=https://leetcode.com/problems/reorganize-string//>Reorganize String(767)</a> </li>
+  <li> <a href=https://leetcode.com/problems/reorganize-string//>Rearrange String k Distance Apart(358)</a> </li>
+
 </ul>
 
 </body>
