--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -324,8 +324,11 @@
   	 <li><a href=https://leetcode.com/problems/assign-cookies/>Assign Cookies</a>  </li>
   	 <li><a href=https://leetcode.com/problems/employee-free-time/>Employee Free Time</a>  </li>
   	 <li><a href=https://leetcode.com/problems/lemonade-change/>Lemonade Change</a>  </li>
-     <li><a href=https://leetcode.com/problems/distribute-candies-to-people/>Distribute candies to people</a>  </li>
-  </ul>
+     <li><a href=https://leetcode.com/problems/distribute-candies-to-people/>Distribute candies to people</a></li>
+     <li> <a href=https://leetcode.com/problems/task-scheduler/>Task Scheduler(621, 767, 358)字符串相同字母间隔K贪心模板</a> </li>
+     <li> <a href=https://leetcode.com/problems/reorganize-string//>Reorganize String(767)</a> </li>
+     <li> <a href=https://leetcode.com/problems/reorganize-string//>Rearrange String k Distance Apart(358)</a> </li>
+     </ul>
 
 
 <div class="codingSectionName">Linear Scan(Hard)</div>
@@ -363,13 +366,8 @@
 </ul>
 
 
-<div class="codingSectionName"Greedy</div>
-<ul>
-  <li> <a href=https://leetcode.com/problems/task-scheduler/>Task Scheduler(621, 767, 358)贪心间隔Template</a> </li>
-  <li> <a href=https://leetcode.com/problems/reorganize-string//>Reorganize String(767)</a> </li>
-  <li> <a href=https://leetcode.com/problems/reorganize-string//>Rearrange String k Distance Apart(358)</a> </li>
 
-</ul>
+
 
 </body>
 
