--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -42,6 +42,7 @@ How to prepare System design:
 
 <li> <a href="Design_NewsFeed.html">Newsfeed : Facebook/Instangram/Twitter/微信朋友圈/Sina Weibo </a></li>
 <li> <a href="Design_Chat.html">Chat System: Facebook Chat/What's App/We chat </a></li>
+<li> <a href="Design_Memcached.html">Memcached</a></li>
 <li> <a href="Design_Youtube.html">Streaming System: Netflix, Youtube</a> </li>
 <li> <a href="Design_Uber.html">Location APP: Uber/Lyft/Yelp</a> </li>
 <li> <a href="Design_rateLimiter.html">Rate limiter</a></li>
@@ -51,7 +52,6 @@ How to prepare System design:
 
 
 <li>What's missing?</li>
-Design fast key/value database cache: Memcached/Redis
 Design Crawler(FB question)
 Design Short URL
 
