--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -75,6 +75,9 @@
   <li><a href="solution/jumpGameV.html">JumpGameV</a> <a href="https://leetcode.com/problems/jump-game-v/">Q</a>  </li>
 	 <li><a href="https://leetcode.com/problems/longest-increasing-path-in-a-matrix/">Longest increasing path in matrix</a>  </li>
    <li><a href="https://leetcode.com/problems/burst-balloons/">Burst Balloons</a>  </li>
+   <li><a href="solution/PartitionEqualSubsetSum.html">PartitionEqualSubsetSum</a> <a href=https://leetcode.com/problems/partition-equal-subset-sum/>Q</a>  </li>
+
+   
 </ul>
 
 
