--- a/html/solution/InterviewGoogle.html
+++ b/html/solution/InterviewGoogle.html
@@ -12,7 +12,7 @@
 809:expressive words, 还有一道sticky note记不清楚题号码了 (ok two pointers), 
 1153(string ok), 489(ok), 734(ok), 737(ok)
 844(ok), (215, ok), 1146(ok), 664(hard), 1530(二叉树divide and conquer)
-224(ok), 818(ok), 981(ok), 621(ok), 767(ok), (358)
+224(ok), 818(ok), 981(ok), 621(ok), 767(ok), (358), 378
 
 
 
@@ -145,9 +145,12 @@ GOOGLE题目真难。 但是挺刺激， 所有题目即使有思路，也不一
 
 
 
+378
 
 
 
+
+9/2
 
 
 
@@ -161,19 +164,12 @@ GOOGLE题目真难。 但是挺刺激， 所有题目即使有思路，也不一
 BQ Question GG:
 地里面的behaviour question，感觉就是那些照着念的，gg的behaviour很简单因为不需要你说例子。例子的选择范围从上学的时候到工作后都可以，所以限制比较小，也可以不举例子讲的比较抽象
 
-
-
+proud project,
+failure experience, o
+bstacles, 
+feedback from previous managers
 你组里面有人很难搞怎么办？
-
-
-
 没人帮你怎么办？
-
-
-
-
-
-
 你怎么去感谢别人帮助你，
 1. Send a letter with nice words describing his impact and cc his manager on the email.
 
