--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -433,7 +433,7 @@ number   Date        rank         score    Finish time     Q1              Q2   
 8/8
 8/9
 
--1 week
+1 week
 8/10                           oncall
 8/11                           oncall
 8/12       1.5        Design for FB   
@@ -442,15 +442,27 @@ number   Date        rank         score    Finish time     Q1              Q2   
 8/15        2                  Design news feed
 
 
--2 week
+2 week
 8/17       2 
 8/18       2
 8/19
 8/20              2            Design feed ACe
 8/21       2
 8/22       2
+8/23       2
 
 
+3 week
+8/24              1.5          Memcached
+
+
+
+                  这周被SB烙印吹赶进度, 还要给M2做presentation.
+8/30           
+
+
+4 week
+9/2        1
 
 </code></pre>
 </body>
