--- a/html/solution/PartitionEqualSubsetSum.html
+++ b/html/solution/PartitionEqualSubsetSum.html
@@ -1,11 +1,11 @@
-&lt;html>
+<html>
 
-&lt;head>
-   &lt;link rel="stylesheet" type="text/css" href="../../css/utility.css">     &lt;!-- external css file -->
-&lt;/head>
+<head>
+  <link rel="stylesheet" type="text/css" href="../../css/utility.css">     <!-- external css file -->
+</head>
 
-&lt;body>
-&lt;pre>&lt;code>
+<body>
+<pre><code>
 
 
 思维方式:  DFS暴力 => DFS + Mem => DP(不一定能写出来)
