--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -110,7 +110,7 @@ number   Date        rank         score    Finish time     Q1              Q2   
 193      6/13      4632 / 9991     7       0:35:24         0:02:23      x0:25:24  2 
 198      7/13      7990 / 15151    3       0:22:47        0:22:47  
 199      7/25      6737 / 14309    7       0:39:16         0:03:58      0:34:16  1 
-          
+                   7151 / 13171    3	     0:49:06	      0:39:06  2	          
 
 
 
@@ -463,6 +463,11 @@ number   Date        rank         score    Finish time     Q1              Q2   
 
 4 week
 9/2        1
+9/3        1
+9/4               2            networking
+9/5        6 
+9/6        6
+9/7       1200
 
 </code></pre>
 </body>
