--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -20,7 +20,7 @@ Online Design resources:
 
 4. Github Facebook design questions(写的一般): https://github.com/donnemartin/system-design-primer
 5. jiuzhang design tutorial(没有撒用) https://www.jiuzhang.com/accounts/profile/registered_courses/75/
-6. <li> <a href="https://acecodeinterview.com">Ace System Design</a></li>   这个感觉不错
+6. <li> <a href="https://acecodeinterview.com">Ace System Design</a></li>
 
 
 
