--- a/html/solution/interview.html
+++ b/html/solution/interview.html
@@ -40,27 +40,14 @@ design:
                                           FB:
 coding: 543(ok), 42(ok), 56(ok), 297(ok), 88(ok), 23(ok), 1026(ok), 773(ok), 84(ok)
 109(ok)， 938(ok), 328(ok), 896(ok), 54(0k), 157(ok), 158(ok), 20(ok), 22(ok), 301(ok), 1249(ok), 472(ok), 339(ok), 973(ok), 1197(ok), 215, 785, 1249(ok), 1428, 621, 560(ok), 129(ok), 238(ok)
-416(ok), 435(ok), 236(ok), (858), 1047(ok), 211(ok), 10(ok)
-
-
-没新题吧，只是问法不一样，感觉本质上还是楼主刷题不够多哇，加油！
-顺便总结一下题目，给大家提个醒：
-Round 1: Coding
-LeetCode 1047. Remove All Adjacent Duplicates In String (Easy)
-LeetCode 42. Trapping Rain Water (Hard)
-
-Round 2: CodingLeetCode 211. Design Add and Search Words Data Structure
-或者是
-LeetCode 10. Regular Expression Matching (原题Hard, 既然只需要匹配 '.' 那就是Easy - Medium 难度了)
-
-Round3: Coding
-LeetCode 191. Number of 1 Bits(Easy)
-LeetCode 297. Serialize and Deserialize Binary Tree(Hard，C++用StringStream做非常简洁，个人觉得Medium难度)
+416(ok), 435(ok), 236(ok), (858), 1047(ok), 211(ok), 10(ok), 191(ok), 125(ok), 78(ok)
 
 
 
+925
 
-Desgin:
+
+                                          FB: Desgin:
 
 Design 1:
 
@@ -79,15 +66,30 @@ Design 2: Type Ahead
 
 
 
-BQ:
+                                         FB: BQ
 讲了最自豪的project
 工作中做过什么错误的决定
+onflicts with colleagues
+negative feedback from manager
+deal with deadlines
 
 
 
 
 
-                                          Twitter
+
+
+
+
+
+
+
+
+
+
+
+
+                                          Twitter Coding
 Coding: 380 的延伸，就是除了原题的要求，还要求getLast也是O(1)。所以要用map+doubly linked list来找getlast，map+list来找getrandom。写完了还要写unit tests，refactor code，还问有更多时间还可以做什么，比如加更多的api啊，注释啊，之类的
 
 
