--- a/html/solution/subset.html
+++ b/html/solution/subset.html
@@ -12,7 +12,7 @@
 Solution 1:
 class Solution {
 
-    public ArrayList<ArrayList<Integer>> subsets(int[] nums) {
+    public ArrayList&lt;ArrayList<Integer>> subsets(int[] nums) {
         // write your code here
         Arrays.sort(nums);
 
