--- a/html/solution/subset.html
+++ b/html/solution/subset.html
@@ -12,18 +12,18 @@
 Solution 1:
 class Solution {
 
-    public ArrayList&lt;ArrayList<Integer>> subsets(int[] nums) {
+    public List&lt;List&lt;Integer>> subsets(int[] nums) {
         // write your code here
         Arrays.sort(nums);
 
-        ArrayList&lt;ArrayList<Integer>> results = new ArrayList&lt;>();
-        ArrayList<Integer> result = new ArrayList&lt;>();
+        ArrayList&lt;ArrayList&lt;Integer>> results = new ArrayList&lt;>();
+        ArrayList&lt;Integer> result = new ArrayList&lt;>();
         dfs(results, result, nums, 0);
         return results;
     }
 
-    private void dfs(ArrayList<ArrayList<Integer>> results, ArrayList<Integer> result, int[] nums, int level){
-        results.add(new ArrayList<Integer>(result));
+    private void dfs(ArrayListt&lt;ArrayList&lt;Integer>> results, ArrayListt&lt;Integer> result, int[] nums, int level){
+        results.add(new ArrayList&lt;Integer>(result));
 
         for( int i=level; i &lt; nums.length; i++){
             result.add(nums[i]);
@@ -35,18 +35,18 @@ class Solution {
 
 Solution 2: DFS里不带for loop的写法。一个DFS里包含两个不同的DFS功能
 class Solution {
-    public List<List<Integer>> subsets(int[] nums) {
+    public Listt&lt;List&lt;Integer>> subsets(int[] nums) {
 
-       List<List<Integer>> results = new ArrayList&lt;>();
-       dfs(results, new ArrayList<Integer>(), nums, 0);
+       Listt&lt;List&lt;Integer>> results = new ArrayList&lt;>();
+       dfs(results, new ArrayList&lt;Integer>(), nums, 0);
 
        return results;
     }
 
-    void dfs(List<List<Integer>> results, List<Integer> result, int[] nums, int pos){
+    void dfs(Listt&lt;List&lt;Integer>> results, Listt&lt;Integer> result, int[] nums, int pos){
 
           if ( pos == nums.length){
-              results.add(new ArrayList<Integer>(result));
+              results.add(new ArrayListt&lt;Integer>(result));
               return;
           }
 
