--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -467,7 +467,19 @@ number   Date        rank         score    Finish time     Q1              Q2   
 9/4               2            networking
 9/5        6 
 9/6        6
-9/7       1200
+
+5weeks
+9/7        2
+9/8        1.5    1
+9/9
+9/10
+9/11
+9/12       3
+9/13       2
+
+
+6 weeks
+9/14       1
 
 </code></pre>
 </body>
