--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -344,7 +344,8 @@
    <li><a href=https://leetcode.com/problems/longest-arithmetic-subsequence-of-given-difference/submissions/>1218. Longest Arithmetic Subsequence of Given Difference(scan and record)
 </a>  </li>
 <li><a href=https://leetcode.com/problems/largest-rectangle-in-histogram/>Largest Rectangle in Histogram(单调栈 monoponous stack)</a></li>
-<li><a href=TaskScheduler.html>Task Scheduler</a> <a href=https://leetcode.com/problems/task-scheduler/>Q</a></li>
+<li><a href=TaskScheduler.html>Task Scheduler(priority queue></a> <a href=https://leetcode.com/problems/task-scheduler/>Q</a></li>
+<li><a href=https://leetcode.com/problems/sliding-window-maximum/> Sliding Window Maximum(Deque的用法)</a></li>
 
 
 </ul>
