--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -480,6 +480,9 @@ number   Date        rank         score    Finish time     Q1              Q2   
 
 6 weeks
 9/14       1
+9/15                          B day 
+9/16       1
+9/17       1  830-950
 
 </code></pre>
 </body>
