--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -170,11 +170,11 @@
   <li><a href="https://leetcode.com/problems/diameter-of-binary-tree/">Diameter of binary tree(分治套分治)</a>  </li>
   <li><a href=https://leetcode.com/problems/unique-binary-search-trees-ii>unique binary search trees(general DFS, return all BST)</a>
   <li><a href="solution/AllPossibleFullBinaryTrees.html">all possible full binary trees(general DFS, return all BT)</a> <a href=https://leetcode.com/problems/all-possible-full-binary-trees/submissions/>Q</a>
-
   <li><a href="solution/binaryTreeSerilization.html">Serialize/Deserialize binary tree</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-binary-tree/description/>Q</a>  </li>
   <li><a href="solution/nArrayTreeSerilization.html">Serialize/Deserialize N arr tree(preorder 遍历 to serialize)</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-n-ary-tree>Q</a></li>
   <li><a href=https://leetcode.com/problems/closest-leaf-in-a-binary-tree/>closest leaf in a binary tree(convert tree to graph)</a></li>
-
+  <li><a href="solution/LowestCommonAccestorOfDeepest.html">Lowest Common Accestor Of Deepest</a> <a href=https://leetcode.com/problems/closest-leaf-in-a-binary-tree/>closest leaf in a binary tree(convert tree to graph)</a></li>
+  
 </ul>
 
 <div class="codingSectionName"> Linked List</div>
@@ -243,8 +243,9 @@
 </ul>
 <ul>
      <li><a href="lecture/Lecture_8._Data_Structure.pdf">Lecture</li>
-	 <li><a href="solution/topKLargestNumbers.html">Top K largest numbers(priority queue)</a> <a href="http://www.lintcode.com/en/problem/top-k-largest-numbers/">Q</a>  </li>
-	 <li><a style="color:red"; href="solution/MaxTree.html">Max Tree(单调栈）</a> <a href="http://www.lintcode.com/en/problem/max-tree/">Q</a>  </li>
+	<li><a href="solution/topKLargestNumbers.html">Top K largest numbers(Priority Queue)</a> <a href="http://www.lintcode.com/en/problem/top-k-largest-numbers/">Q</a>  </li>
+	<li><a href=TaskScheduler.html>Task Scheduler(Priority Queue></a> <a href=https://leetcode.com/problems/task-scheduler/>Q</a></li> 
+	<li><a style="color:red"; href="solution/MaxTree.html">Max Tree(单调栈）</a> <a href="http://www.lintcode.com/en/problem/max-tree/">Q</a>  </li>
 	 <li><a style="color:green"; href="solution/LargestRectangleInHistogram.html">Largest Rectangle in Histogram(单调增栈，很难理解只能背诵）</a> <a href="http://www.lintcode.com/en/problem/largest-rectangle-in-histogram/">Q</a>  </li>
 	 <li><a style="color:red"; href="solution/heaplify.html">Heaplify<a href="http://www.lintcode.com/en/problem/heapify/">Q</a>  </li>
 	 <li><a style="color:red"; href="solution/LRUCache.html">LRU cache<a href="http://www.lintcode.com/en/problem/lru-cache/">Q</a>  </li>
@@ -259,7 +260,8 @@
    <li><a href="solution/myCalendarII.html">My Calendar I(TreeMap)</a> <a href=https://leetcode.com/problems/my-calendar-ii/description/>Q</a>  </li>
    <li><a href="solution/Trie.html">Trie<a href=https://leetcode.com/problems/implement-trie-prefix-tree/description/>Q</a>  </li>
    <li><a  href="solution/IntertInterval">Insert Interval<a href=https://leetcode.com/problems/insert-interval/discuss/21600/Short-java-code>Q</a>  </li>
-
+   <li><a href=TaskScheduler.html>Sliding Window Maximum( Deque )</a> <a href=https://leetcode.com/problems/sliding-window-maximum/> Q</a></li>
+   
 </ul>
 
 <div class="codingSectionName">String</div>
@@ -344,8 +346,6 @@
    <li><a href=https://leetcode.com/problems/longest-arithmetic-subsequence-of-given-difference/submissions/>1218. Longest Arithmetic Subsequence of Given Difference(scan and record)
 </a>  </li>
 <li><a href=https://leetcode.com/problems/largest-rectangle-in-histogram/>Largest Rectangle in Histogram(单调栈 monoponous stack)</a></li>
-<li><a href=TaskScheduler.html>Task Scheduler(priority queue></a> <a href=https://leetcode.com/problems/task-scheduler/>Q</a></li>
-<li><a href=https://leetcode.com/problems/sliding-window-maximum/> Sliding Window Maximum(Deque的用法)</a></li>
 
 
 </ul>
