--- a/html/solution/interview.html
+++ b/html/solution/interview.html
@@ -40,14 +40,11 @@ design:
                                           FB:
 coding: 543(ok), 42(ok), 56(ok), 297(ok), 88(ok), 23(ok), 1026(ok), 773(ok), 84(ok)
 109(ok)， 938(ok), 328(ok), 896(ok), 54(0k), 157(ok), 158(ok), 20(ok), 22(ok), 301(ok), 1249(ok), 472(ok), 339(ok), 973(ok), 1197(ok), 215, 785, 1249(ok), 1428, 621(ok), 560(ok), 129(ok), 238(ok)
-416(ok), 435(ok), 236(ok), (858), 1047(ok), 211(ok), 10(ok), 191(ok), 125(ok), 78(ok)， 339, 71变体(ok), 239变体
+416(ok), 435(ok), 236(ok), (858), 1047(ok), 211(ok), 10(ok), 191(ok), 125(ok), 78(ok)， 339, 71变体(ok), 239变体(ok), 498 变体(ok) 单向右上(每一层都翻转 ok)
 
 
-71变体:  模拟CD指令，两个参数。第一个当前路径 第二个最终路径. 问最终的pwd。注意如果最终路径以“/”开始 不需要考虑当前路径。
-            Solution: split the current path, put it in stack and then split the destination path, put it in stack. then print out stack
 
-239 变体:
-3. 刷题网丝九巴 变体 单向右上
+
 
 
 925
@@ -70,7 +67,38 @@ Design 2: Type Ahead
 
 
 Design 3 : System Design. 先玩游戏， 然后返回leaderboard 信息包括global ranking, global top 10，friends ranking，自己的ranking 前面十个 后个十个之类的
+           
+           大家玩完游戏后往一个统计分数service发写请求,送分数, 然后一张DB表存 global ranking
+           在用一张表存自己的前10后10.
 
+           Requirement + capacity.
+
+           Global ranking table: 
+           User Id     pk 
+           score       int 
+           user Name   string
+           rank        int 
+
+
+           前10后10table:
+           user id                 pk 
+           user name               string 
+           Top10Bottom10 user id   fk
+
+           Friendship table:
+           id           int  pk 
+           from_user    int 
+           to_user      int
+
+
+           另外一个service接受读请求, 
+           read global table to global ranking   (cache)  
+           read global table top 10 (cache)
+           从Friendship DB读好友, 从global table查分数, 排序,返回给User.
+           从前10后10 table读自己的前10后10.
+
+
+           partition using user id.
 
 
 
