--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -173,7 +173,7 @@
   <li><a href="solution/binaryTreeSerilization.html">Serialize/Deserialize binary tree</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-binary-tree/description/>Q</a>  </li>
   <li><a href="solution/nArrayTreeSerilization.html">Serialize/Deserialize N arr tree(preorder 遍历 to serialize)</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-n-ary-tree>Q</a></li>
   <li><a href=https://leetcode.com/problems/closest-leaf-in-a-binary-tree/>closest leaf in a binary tree(convert tree to graph)</a></li>
-  <li><a href="solution/LowestCommonAccestorOfDeepest.html">Lowest Common Accestor Of Deepest</a> <a href=https://leetcode.com/problems/closest-leaf-in-a-binary-tree/>closest leaf in a binary tree(convert tree to graph)</a></li>
+  <li><a href="solution/LowestCommonAccestorOfDeepest.html">Lowest Common Accestor Of Deepest</a> <a href=https://leetcode.com/problems/closest-leaf-in-a-binary-tree/>Q</a></li>
   
 </ul>
 
@@ -244,7 +244,7 @@
 <ul>
      <li><a href="lecture/Lecture_8._Data_Structure.pdf">Lecture</li>
 	<li><a href="solution/topKLargestNumbers.html">Top K largest numbers(Priority Queue)</a> <a href="http://www.lintcode.com/en/problem/top-k-largest-numbers/">Q</a>  </li>
-	<li><a href=TaskScheduler.html>Task Scheduler(Priority Queue></a> <a href=https://leetcode.com/problems/task-scheduler/>Q</a></li> 
+	<li><a href=TaskScheduler.html>Task Scheduler(Priority Queue)</a> <a href=https://leetcode.com/problems/task-scheduler/>Q</a></li> 
 	<li><a style="color:red"; href="solution/MaxTree.html">Max Tree(单调栈）</a> <a href="http://www.lintcode.com/en/problem/max-tree/">Q</a>  </li>
 	 <li><a style="color:green"; href="solution/LargestRectangleInHistogram.html">Largest Rectangle in Histogram(单调增栈，很难理解只能背诵）</a> <a href="http://www.lintcode.com/en/problem/largest-rectangle-in-histogram/">Q</a>  </li>
 	 <li><a style="color:red"; href="solution/heaplify.html">Heaplify<a href="http://www.lintcode.com/en/problem/heapify/">Q</a>  </li>
@@ -372,7 +372,10 @@
   <li><a href="solution/mergeIntervals.html">Merge intervals</a> <a href=https://leetcode.com/problems/merge-intervals/>Q</a>  </li>
 </ul>
 
-
+<div class="codingSectionName">时间复杂度/常见数据结构 Summary</div>
+<ul>
+  <li><a href="solution/Timecomplexity.html">时间复杂度/常见数据结构</a> <a href=https://leetcode.com/problems/merge-intervals/>Q</a>  </li>
+</ul>
 
 
 
