--- a/html/solution/RouteBetweenTwoNodesinGraph.html
+++ b/html/solution/RouteBetweenTwoNodesinGraph.html
@@ -99,7 +99,12 @@ public class Solution {
 对于有向图来说 O(m+n) = O(n*n + n) = O(n^2)
 
 
+无向图遍历的时间复杂度  O( V + E) = O(V)
+有向图遍历的时间复杂度  O( V + E) = O(E) = O(V^2)
 
+
+无向图搜索的时间复杂度：N!
+有向图搜索的时间复杂度：N^N
 
 
 
