--- a/html/solution/2DDFSSummary.html
+++ b/html/solution/2DDFSSummary.html
@@ -46,27 +46,32 @@ BFS解法
 void BFS(int x, int y, int m, int n){
 
      Queue&lt;int[]> q = new LinkedList&lt;>();
-	 HashSet&lt;int[]> set = new HashSet&lt;>();
+	 HashSet&lt;String> set = new HashSet&lt;>();
 
 
 	 q.add(new int[]{}(x,y));
-	 set.add(new int[][{x,y});
+	 set.add(x+" "+y);
 
 	 while( ！q.isEmpty（））{
-	     int[] node = q.poll();
+		 int[] node = q.poll();
+		 
+		 int newX = node[0];
+		 int newY = node[1];
 
-		 if （ node[0] == m, &amp;&amp; node[1]  == n ){
+		 if （newX == m, &amp;&amp; newY  == n ){
 		      return true;
 		 }
 
-		 if ( 2*node[0] <= m &amp;&amp; node[1] <= n &amp;&amp; 判断 (2*n[0], n[1])未访问过 ){
-		     q.add(new Node(2*n[0], y);
-		     set.add(new Node(2*n[0], y));
+
+
+		 if ( 2*newX <= m &amp;&amp; newY <= n &amp;&amp; && !set.contains(2*newx + " " + newY) ){
+		     q.add(new Node(2*newX, newY);
+		     set.add(new Node(2*newX, newY));
 		}
 
-		 if ( n[0] <= m &amp;&amp; 2n[1]<= m &amp;&amp; 判断 （n[0], 2*n[1])未被访问过 ){
-		     q.add(Node(n[0], 2*n[1](;
-		     set.add(Node(n[0], 2*n[1]);
+		 if ( newX <= m &amp;&amp; 2newY<= m &amp;&amp; && !set.contains(newx + " " + 2*newY) ){
+		     q.add(Node(newX, 2*newY(;
+		     set.add(Node(newX, 2*newY);
 		 }
 	 }
 
@@ -90,9 +95,7 @@ void DFS(int x, int y, int m, int n， boolean[][] visited){
     visited[x][y] = true;
 
     DFS(2x, y, m, n);
-	  DFS(x, 2y, m, n);
-
-    visited[x][y] = false;
+	DFS(x, 2y, m, n);
 }
 
 
