--- a/html/solution/Timecomplexity.html
+++ b/html/solution/Timecomplexity.html
@@ -25,10 +25,13 @@ O(1)     Deque
 
 2. DFS 套路
 
-DFS 暴力  =>      DFS　+ memorization   =>       DP
-                  面试写到这步一般能过          面试不可能写出来
+DFS (模板不返回值)  =>   DFS(返回值)   =>     DFS　+ memorization   =>       DP
+                                             面试写到这步一般能过          面试不可能写出来(不用去考虑)
 
 
+
+从DFS => DFS 返回值, 可以返回boolean
+example: 如何从DFS不返回值到DFS返回boolean.  <li><a href="solution/PartitionEqualSubsetSum.html">PartitionEqualSubsetSum</a> <a href=https://leetcode.com/problems/partition-equal-subset-sum/>Q</a>  </li>
 
 
 
