--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -372,9 +372,9 @@
   <li><a href="solution/mergeIntervals.html">Merge intervals</a> <a href=https://leetcode.com/problems/merge-intervals/>Q</a>  </li>
 </ul>
 
-<div class="codingSectionName">时间复杂度/常见数据结构 Summary</div>
+<div class="codingSectionName">Time Complexity/Data Structure Summary</div>
 <ul>
-  <li><a href="solution/Timecomplexity.html">时间复杂度/常见数据结构</a> <a href=https://leetcode.com/problems/merge-intervals/>Q</a>  </li>
+  <li><a href="solution/Timecomplexity.html">时间复杂度/常见数据结构总结</a> <a href=https://leetcode.com/problems/merge-intervals/>Q</a>  </li>
 </ul>
 
 
