--- a/html/solution/Timecomplexity.html
+++ b/html/solution/Timecomplexity.html
@@ -31,8 +31,13 @@ DFS (模板不返回值)  =>   DFS(返回值)   =>     DFS　+ memorization   =>
 
 
 从DFS => DFS 返回值, 可以返回boolean
-example: 如何从DFS不返回值到DFS返回boolean.  <li><a href="solution/PartitionEqualSubsetSum.html">PartitionEqualSubsetSum</a> <a href=https://leetcode.com/problems/partition-equal-subset-sum/>Q</a>  </li>
+example: 
+1.如何从DFS不返回值到DFS返回boolean.  <li><a href="solution/PartitionEqualSubsetSum.html">PartitionEqualSubsetSum</a> <a href=https://leetcode.com/problems/partition-equal-subset-sum/>Q</a>  </li>
+memory array size is n * (target + 1) where n is the size of array, target is the business goal.
 
+
+2.如何从DFS不返回值到DFS返回int.  <li><a href="solution/KnightDialer.html">KnightDialer</a> <a href=https://leetcode.com/problems/knight-dialer/>Q</a>  </li>
+memory array size is n * (target + 1) where n is the size of array, target is the business goal.
 
 
 
