--- a/html/solution/Timecomplexity.html
+++ b/html/solution/Timecomplexity.html
@@ -30,17 +30,23 @@ DFS (模板不返回值)  =>   DFS(返回值)   =>     DFS　+ memorization   =>
 
 
 
-从DFS => DFS 返回值, 可以返回boolean
-example: 
-1.如何从DFS不返回值到DFS返回boolean.  <li><a href="solution/PartitionEqualSubsetSum.html">PartitionEqualSubsetSum</a> <a href=https://leetcode.com/problems/partition-equal-subset-sum/>Q</a>  </li>
-memory array size is n * (target + 1), where n is the size of array, target is the business goal.
+从DFS => DFS 返回值, 可以返回boolean or int
+Example: 
+1. 如何从DFS不返回值到DFS返回boolean.  
+
+<li><a href="PartitionEqualSubsetSum.html">PartitionEqualSubsetSum</a> <a href=https://leetcode.com/problems/partition-equal-subset-sum/>Q</a>  </li>
+memory array size is n * (target + 1), where n is the size of array.
 
 
-2.如何从DFS不返回值到DFS返回int.  <li><a href="solution/KnightDialer.html">KnightDialer</a> <a href=https://leetcode.com/problems/knight-dialer/>Q</a>  </li>
+2. 如何从DFS不返回值到DFS返回int.  
+
+<li><a href="KnightDialer.html">KnightDialer</a> <a href=https://leetcode.com/problems/knight-dialer/>Q</a>  </li>
 memory array size is n * 10, where n is the total step, from 0-9, there are 10 numsbers. 
 
 
 
+<li><a href="numberOfDiceWithTargetValue.html">Number of Dice with target Value </a> <a href="https://leetcode.com/problems/number-of-dice-rolls-with-target-sum/">Q</a></li>
+memory array size is n * (target + 1), where n is the total number of dice.
 
 
 
